--- a/package.json
+++ b/package.json
@@ -5,15 +5,19 @@
   "main": "server.js",
   "scripts": {
     "start": "SET NODE_ENV=production & node server",
-    "dev": "nodemon server"
+    "server": "nodemon server"
   },
   "author": "Paul Bingham",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.5",
+    "nodemailer": "^6.6.0",
     "slugify": "^1.5.0"
   },
   "devDependencies": {
